create templates for jobs and secondary job pages

--- a/web/themes/dedrone/scss/styles.scss
+++ b/web/themes/dedrone/scss/styles.scss
@@ -35,10 +35,12 @@
 @import 'blocks/products_software';
 @import 'blocks/customers-coment';
 @import 'blocks/jobs-slider';
-@import 'blocks/two-columns-paragraph.scss';
-@import 'blocks/press-events.scss';
-@import 'blocks/other-news.scss';
+@import 'blocks/two-columns-paragraph';
+@import 'blocks/press-events';
+@import 'blocks/other-news';
 @import 'blocks/products_mitigation';
+@import 'blocks/jobs-event';
+@import 'blocks/job-description';
 
 
 
