--- a/web/themes/dedrone/templates/paragraph/paragraph--two-columns-paragraph.html.twig
+++ b/web/themes/dedrone/templates/paragraph/paragraph--two-columns-paragraph.html.twig
@@ -54,10 +54,10 @@
       <div class="container">
         <div class="row">
           <div class="col-sm-12 col-md-6">
-            <div class="left-column">{{ content.field_left_column }}</div>
+            <div class="left-column">{{ content.field_le }}</div>
           </div>
           <div class="col-sm-12 col-md-6">
-            <div class="right-column">{{ content.field_right_column }}</div>
+            <div class="right-column">{{ content.field_r }}</div>
           </div>
         </div>
       </div>
