--- a/web/themes/dedrone/scss/paragraph/_about_us.scss
+++ b/web/themes/dedrone/scss/paragraph/_about_us.scss
@@ -22,7 +22,6 @@
 
 .key-figures
 {
-
 	@extend .section;
 	position:relative;
 	padding-bottom: 50px !important;
@@ -45,7 +44,6 @@
 	    margin-top:0px;
 	    color: #fff;
 	}
-
 }
 
 .move
@@ -134,6 +132,16 @@
 		display: inline-block;
 		width:300px;
 		color: #fff;
+	}
+
+	.datetime
+	{
+		color: #111;
+		font-size: 12px;
+		line-height: 15px;
+		letter-spacing: 1px;
+		text-transform: uppercase;
+		font-weight: 700;
 	}
 
 }
