--- a/web/themes/dedrone/templates/paragraph/paragraph--shared-full-width-col-7-col-5.html.twig
+++ b/web/themes/dedrone/templates/paragraph/paragraph--shared-full-width-col-7-col-5.html.twig
@@ -11,10 +11,10 @@
   <div{{ attributes.addClass(classes) }}>
     {% block content %}
       <div class = "row">
-            <div class="col-7">
+            <div class="col-md-7 col-12">
               {{content.field_columns[0]}}
             </div>
-            <div class="col-5">
+            <div class="col-md-5 col-12">
               {{content.field_columns[1]}}
             </div>
       </div>
