--- a/web/themes/dedrone/scss/paragraph/_shared.scss
+++ b/web/themes/dedrone/scss/paragraph/_shared.scss
@@ -346,7 +346,7 @@ Right_vertically|Right vertically
   }
   h2 a:hover
   {
-    color:#009ee3;
+    color:#111;
   }
 
   a{
@@ -528,5 +528,10 @@ Right_vertically|Right vertically
   }
 }
 
+
+.display-block
+{
+  display: block !important;
+}
 
 
