--- a/web/themes/dedrone/css/styles.css
+++ b/web/themes/dedrone/css/styles.css
@@ -7322,7 +7322,19 @@ a {
           text-transform: uppercase;
           cursor: pointer; }
         .main-menu > li > a {
-          padding: 10px 0; } }
+          padding: 10px 0; }
+      .main-menu > .menu-item--expanded > .menu {
+        position: relative;
+        left: 0px;
+        right: auto;
+        width: 100%;
+        min-width: 180px;
+        transform: translateX(0);
+        padding: 10px;
+        margin: 0px;
+        box-shadow: none; }
+      .main-menu > .menu-item--expanded:hover > .menu, .main-menu > .menu-item--expanded:focus > .menu {
+        display: block; } }
 
 /* ==========================================================================
    Footer menu region style sheets.
@@ -8043,6 +8055,33 @@ button {
     .contact-us-form {
       padding-top: 50px;
       padding-bottom: 50px; } }
+
+.webform-confirmation {
+  padding: 150px 0;
+  background: #011d2a;
+  color: #fff; }
+  .webform-confirmation__message {
+    margin-bottom: 30px; }
+    .webform-confirmation__message h2 {
+      font-size: 40px;
+      line-height: 45px;
+      margin-bottom: 10px;
+      text-align: center;
+      color: #fff; }
+  .webform-confirmation__back {
+    text-align: center; }
+    .webform-confirmation__back .btn, .webform-confirmation__back .more-blogs .more-link a, .more-blogs .more-link .webform-confirmation__back a, .webform-confirmation__back .blogs-filter .form-submit, .blogs-filter .webform-confirmation__back .form-submit, .webform-confirmation__back .blog-list .views-exposed-form .form-submit, .blog-list .views-exposed-form .webform-confirmation__back .form-submit, .webform-confirmation__back .slider-main .wrap-description .button, .slider-main .wrap-description .webform-confirmation__back .button {
+      background: #009ee3;
+      padding: 15px 30px;
+      color: #fff;
+      font-size: 11px;
+      font-weight: 400;
+      line-height: 15px;
+      text-transform: uppercase;
+      border: 0 none;
+      -webkit-appearance: none;
+         -moz-appearance: none;
+              appearance: none; }
 
 .event-registration p,
 .node--type-event p {
